# nlp100v2025

./: .gitignore  README.md  pyproject.toml
ch01/: ans00.py  ans01.py  ans03.py  ans04.py  ans05.py  ans06.py  ans07.py  ans08.py  ans09.py
ch02/: ans10.py  ans11.py  ans11.sh  ans12.py  ans12.sh  ans13.py  ans13.sh  ans14.py  ans14.sh  ans15.py  ans16.py  ans16.sh  ans17.py  ans18.py  ans19.py
ch03/: ans20.py  ans21.py  ans22.py  ans23.py  ans24.py  ans25.py  ans26.py  ans27.py  ans28.py  ans29.py
ch04/: ans30.py  ans30.sh  ans31.py  ans32.py  ans33.py  ans34.py  ans35.py  ans36.py  ans37.py  ans38.py  ans39.py
ch05/: ans40.py  ans41.py  ans42.py  ans43.py  ans44.py  ans45.py  ans46.py  ans47.py  ans48.py  ans49.py
ch06/: ans50.py  ans51.py  ans52.py  ans53.py  ans54.py  ans55.py  ans56.py  ans57.py  ans58.py  ans59.py
ch07/: ans60.py  ans61.py  ans62.py  ans63.py  ans64.py  ans65.py  ans66.py  ans67.py  ans68.py  ans69.py
ch08/: ans70.py  ans71.py  ans72.py  ans73.py  ans74.py  ans75.py  ans76.py  ans77.py  ans78.py  ans79.py
ch09/: ans80.py  ans81.py  ans82.py  ans83.py  ans84.py  ans85.py  ans86.py  ans87.py  ans88.py  ans89.py
ch10/: ans90.py  ans91.py  ans92.py  ans93.py  ans94.py  ans95.py  ans96.py  ans97.py  ans98.py  ans99.py
